src/ModalDialog/style.module.css
.background {
    z-index: 20;
    background: var(--white);
    display: flex;
    overflow: scroll;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}

@supports (backdrop-filter: blur(20px)) {
    .background {
        background: rgba(255, 255, 255, 0.8);
        backdrop-filter: blur(20px);
    }
}

.overlay {
    padding: 2rem;
    flex-basis: 600px;
    min-width: 0;
    --lang-color: var(--orange);
}

@media (max-width: 500px) {
    .overlay {
        padding: 1rem;
    }
}

.title {
    line-height: var(--lineHeightParagraph);
    margin-top: 0;
}

